--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="el">
+<script> <? php include 'socialcalendar.php';
+?>
+
+</script>
+
 <title>Calendar Home Page</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -6,10 +13,8 @@
   <link rel="icon" type="image/png" href="./images/calendar-icon.png"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-<nav class="navbar navbar-inverse">
+  
+  <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
         <img class="navbar-brand" src="./images/calendar-logo.jpg"/>
@@ -26,6 +31,9 @@
     </div>
   </div>
 </nav>
+  
+</head>
+<body>
   
 <div class="container-fluid text-center">    
     <div class="row content">
